join desktop event fix, add copy button mobile event, fix cancel button image editor.

--- a/src/app/components/events/mobile/join-page-item-template/join-page-item-template.component.sass
+++ b/src/app/components/events/mobile/join-page-item-template/join-page-item-template.component.sass
@@ -551,12 +551,33 @@
   justify-content: center
   position: absolute
   top: 5px
-  right: 7px
+  right: 5px
   z-index: 1
   cursor: pointer
 
 .show-final-image
   background: url("../../../../../assets/share/show-final-image.png") center center no-repeat
+  background-size: contain
+  width: 20px
+  height: 18px
+
+.clickCopy
+  background: rgba(0, 0, 0, 0.5)
+  border-radius: 100%
+  width: 50px
+  height: 50px
+  display: flex
+  align-items: center
+  justify-content: center
+  position: absolute
+  top: 5px
+  left: 5px
+  z-index: 1
+  cursor: pointer
+
+
+.copyLink-img
+  background: url("../../../../../assets/share/clickCopy.png") center center no-repeat
   background-size: contain
   width: 20px
   height: 18px
