--- a/src/app/components/share/desktop/quiz-template/quiz-template.component.sass
+++ b/src/app/components/share/desktop/quiz-template/quiz-template.component.sass
@@ -633,6 +633,7 @@
   display: flex
   width: 227px
   justify-content: flex-end
+  position: relative
   //align-items: center
   //background: rgba(0, 0, 0, 0.9)
 
@@ -726,7 +727,7 @@
   justify-content: center
   position: absolute
   top: 5px
-  right: 7px
+  right: 5px
   z-index: 1
   cursor: pointer
 
